--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,8 +1,32 @@
+:root {
+  /* TODO: develop real color scheme */
+  --color-neutral: lightgray;
+  --color-primary: royalblue;
+  --color-secondary: green;
+
+  --transition-time: 0.3s;
+}
+
 * {
   box-sizing: border-box;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 body {
   margin: 0;
   min-height: 100vh;
+  background-color: skyblue;
 }
