--- a/web/src/App.css
+++ b/web/src/App.css
@@ -1,6 +1,7 @@
 .block-container {
-  background-color: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(5px);
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(10px);
   border-radius: 1rem;
 }
 
